--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for='name'>Name</label>
+		<input id='name' type='text' required placeholder='Name'>
+		<br>
+		<label for='email'>Email</label>
+		<input id='email' type='email' required placeholder='email'>
+		<br>
+		<label for='gender'>Male</label>
+		<input id='gender' type='radio' required name='gender' value='gender_m'>
+		<br>
+		<label for='gender'>Female</label>
+		<input id='gender' type='radio' required name='gender' value='gender_f'>
+		<br>
+		<label for='cars'>Car Brands</label>
+		<Select id='cars' type='text' required placeholder='--Please choose an option-'>
+		<br>
+		<label for='age'>Age</label>
+		<input id='age' type='Number' required placeholder='Age'>
+		<br>
+		<label for='dob'>DOB</label>
+		<input id='dob' type='Date' required >
+		<br>
+		<label for='tel'>Phone Number</label>
+		<input id='tel' type='Tel' required placeholder='xxx-xxx-xxxx'>
+		<br>
+		<label for='password'>Password</label>
+		<input id='password' type='password' required placeholder='Password'>
+		<br>
+		<label for='tos'>I agree to the TOS</label>
+		<input id='tos' type='Checkbox' required >
+	</form>
+		<button type='submit'>Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
