--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+		<form method='post'>
 		<label for='name'>Name</label>
 		<input id='name' type='text' required placeholder='Name'>
 		<br>
@@ -25,7 +25,7 @@
 		<Select id='cars' type='text' required placeholder='--Please choose an option-'>
 		<br>
 		<label for='age'>Age</label>
-		<input id='age' type='Number' required placeholder='Age'>
+		<input id='age' type='number' required placeholder='Age'>
 		<br>
 		<label for='dob'>DOB</label>
 		<input id='dob' type='Date' required >
@@ -38,8 +38,9 @@
 		<br>
 		<label for='tos'>I agree to the TOS</label>
 		<input id='tos' type='Checkbox' required >
-	</form>
 		<button type='submit'>Submit</button>
+	</form>
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
