--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 		<Select id='cars' type='text' required placeholder='--Please choose an option-'>
 		<br>
 		<label for='age'>Age</label>
-		<input id='age' type='Number' required placeholder='Age'>
+		<input id='age' type='Number' name='age' required placeholder='Age'>
 		<br>
 		<label for='dob'>DOB</label>
 		<input id='dob' type='Date' required >
